// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Skeleton component should render correctly - lg 1`] = `
<Skeleton
  className="ins-c-skeleton ins-c-skeleton__lg"
/>
`;

exports[`Skeleton component should render correctly - md 1`] = `
<Skeleton
  className="ins-c-skeleton ins-c-skeleton__md"
/>
`;

exports[`Skeleton component should render correctly - sm 1`] = `
<Skeleton
  className="ins-c-skeleton ins-c-skeleton__sm"
/>
`;

exports[`Skeleton component should render correctly - xs 1`] = `
<Skeleton
  className="ins-c-skeleton ins-c-skeleton__xs"
/>
`;

exports[`Skeleton component should render correctly as dark 1`] = `
<Skeleton
  className="ins-c-skeleton ins-c-skeleton__md ins-m-dark"
/>
`;

exports[`Skeleton component should render correctly without size 1`] = `
<Skeleton
  className="ins-c-skeleton ins-c-skeleton__md"
/>
`;
